--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,9 +7,8 @@
   </head>
   <body>
     <h1>Login</h1>
+    <% if(messages.error) { %> <%= messages.error %> <% } %>
     <form action="/login" method="POST">
-      <label for="name">Name: </label>
-      <input type="text" id="name" name="name" required />
       <label for="email">Email: </label>
       <input type="email" id="email" name="email" required />
       <label for="password">Password: </label>
